--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,23 @@
-spring.datasource.url=jdbc:h2:mem:test;MODE=MySQL;
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=sa
+# Configurações do servidor
+server.port=8080
+
+# Configurações do banco de dados H2 (em memória)
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.platform=h2
+
+# Configurações do JPA e Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Configurações do H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Log level settings
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=DEBUG
